--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ nomic = {version = "^3.3.3"}
 gpt4all = {version = "^2.5.0"}
 #docling = "^2.8.3"
 #torch = "^2.5.1"
+tenacity = "^9.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^0.24.0"
