--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ gpt4all = {version = "^2.5.0"}
 #docling = "^2.8.3"
 #torch = "^2.5.1"
 tenacity = "^9.0.0"
+sqlalchemy = "^2.0.36"
+pgvector = "^0.3.6"
+psycopg = "^3.2.3"
+psycopg-binary = "^3.2.3"
+postgres = "^4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^0.24.0"
